--- a/music/rap.html
+++ b/music/rap.html
@@ -29,17 +29,16 @@
             <h2>
                 Le Rap
             </h2>
-            <p>
+            <div class="paragraph">
                 Le rap est un mouvement culturel et musical soutenant un chant aux paroles, improvisées ou non, scandées
-                sur un rythme très martelé,
-                il prend ses racines du hip-hop, ayant émergé au début des années 1970 dans les ghettos aux États-Unis.
-                En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier tube rap dans le monde et notamment en
-                France où le mouvement hip-hop touche la jeunesse des cités.
-            </p>
+                sur un rythme très martelé, il prend ses racines du hip-hop, ayant émergé au début des années 1970 dans
+                les ghettos aux États-Unis. En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier tube rap
+                dans le monde et notamment en France où le mouvement hip-hop touche la jeunesse des cités.
+            </div>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/0tm6gsXe0LSm9zeSspyMQu" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/0tm6gsXe0LSm9zeSspyMQu"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="simple-yt">
@@ -50,9 +49,9 @@
                     Le premier tube de rap, Rapper's Delight de Sugarhill Gang.
                 </figcaption>
             </figure>
-            <p>
+            <div class="paragraph">
                 On distingue principalement 2 types de rap: le rap français et le rap américain.
-            </p>
+            </div>
             <ul>
                 <li>
                     <a href="#rapfr">Rap FR</a>
@@ -63,33 +62,35 @@
             </ul>
 
             <article id="rapfr">
-                <p>
+                <!--Warning: Article lacks heading. Consider using h2-h6 elements to add identifying headings to all articles.-->
+                <div class="paragraph">
                     Voici ci-dessous une liste de quelques Dj les plus connus aujourd'hui.
-                </p>
+                </div>
                 <ul>
                     <li>
                         Columbine
                         <figure class="float-right bordered">
-                            <img src="../images/columbine.jpg"
-                                alt="logo columbine"
-                                width="200" class="rounded-corners" />
-                                <figcaption>
-                                    le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)
-                                </figcaption>
+                            <img src="../images/columbine.jpg" alt="logo columbine" width="200"
+                                class="rounded-corners" />
+                            <figcaption>
+                                le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)
+                            </figcaption>
                         </figure>
-                        <p>
+                        <div class="paragraph">
                             collectif de rap français formé en 2014, originaire de la banlieue de Rennes, leur troisième
                             album Adieu bientôt a été certifié disque de platine.
                             Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
                             bientôt, les prélis.
-                        </p>
+                        </div>
                         <figure class="simple-yt">
                             <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YljnTp8yQFM"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                             <figcaption>
-                               Le clip pierre, feuille, papier, ciseaux, dans lequel le groupe dresse un portrait de leur époque.
+                                Le clip pierre, feuille, papier, ciseaux, dans lequel le groupe dresse un portrait de
+                                leur époque.
                             </figcaption>
+                        </figure>
                     </li>
                     <li>
                         Nekfeu
@@ -99,31 +100,31 @@
                                 Nekfeu
                             </figcaption>
                         </figure>
-                        <p>
+                        <div class="paragraph">
                             Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait
                             partie de 5 Majeur.
                             Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses
-                            principaux
-                            titres sont princesse, on verra, ma dope.
-                        </p>
-                            <figure class="simple-yt">
+                            principaux titres sont princesse, on verra, ma dope.
+                        </div>
+                        <figure class="simple-yt">
                             <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YltjliK0ZeA"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                             <figcaption>
-                               Le titre on verra, sorti en 2015, dont le clip sur YouTube a atteint environ 99 millions de vues.
+                                Le titre on verra, sorti en 2015, dont le clip sur YouTube a atteint environ 99 millions
+                                de vues.
                             </figcaption>
+                        </figure>
                     </li>
                     <li>
                         PNL
                         <figure class="float-right bordered">
-                            <img src="../images/pnl.jpg" alt="PNL"
-                                width="200" class="rounded-corners" />
-                                <figcaption>
-                                    la pochette de leur dernier album, deux frères.
-                                </figcaption>
+                            <img src="../images/pnl.jpg" alt="PNL" width="200" class="rounded-corners" />
+                            <figcaption>
+                                la pochette de leur dernier album, deux frères.
+                            </figcaption>
                         </figure>
-                        <p>
+                        <div class="paragraph">
                             sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères,
                             Ademo et N.O.S (de leurs vrais noms Tarik et Nabil Andrieu),
                             originaires de la cité des Tarterêts à Corbeil-Essonnes.
@@ -131,11 +132,11 @@
                             aujourd'hui plus de 123 millions de vues.
                             Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000
                             ventes.
-                        </p>
+                        </div>
                         <div class="spotify-integ">
                             <div>
                                 <iframe src="https://open.spotify.com/embed/track/5lCxlSBFyP5g4EhVypAoOu"
-                                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                    allow="encrypted-media"></iframe>
                             </div>
                         </div>
                         <figure class="simple-yt">
@@ -156,12 +157,13 @@
                                 Orelsan
                             </figcaption>
                         </figure>
-                        <p>
-                            Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One Punch Man,
-                            il revient à la musique en 2017 avec le titre "basique", avant de sortir l'album la fête est finie,
-                            certifié disque de diamant. Le rappeur a remporté trois Victoires de la musique.
-                            Ses titres les plus populaires sont paradis, défaite de famille et mes grands-parents.
-                        </p>
+                        <div class="paragraph">
+                            Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One
+                            Punch Man, il revient à la musique en 2017 avec le titre "basique", avant de sortir 
+                            l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté trois 
+                            Victoires de la musique. Ses titres les plus populaires sont paradis, 
+                            défaite de famille et mes grands-parents.
+                        </div>
                     </li>
                 </ul>
             </article>
@@ -170,10 +172,10 @@
                 <h2>
                     Rap US
                 </h2>
-                <p>
+                <div class="paragraph">
                     Il s'agit du rap américain, qui s'exporte beaucoup dans les autres pays, notamment en France.
-                </p>
-                <p>
+                </div>
+                <div class="paragraph">
                     Le rappeur le plus connu aujourd'hui, Eminem, est originaire de Détroit. Il crée souvent la
                     polémique à cause de certains de ses titres, comme the Real Slim Shady issu de l'album The Slim
                     Shady LP.
@@ -192,8 +194,8 @@
                     Ses principaux titres sont Lose yourself, Stan, Mockingbird, Without me, Rap God.
                     Il existe de nombreux autres rappeurs américains connus, comme Kanye West, Fat Joe, Asap Rocky,
                     XXXTentacion, Jay Z, Snoop Dog, Dr Dre et beaucoup d'autres.
-                </p>
-                 <figure class="double-yt">
+                </div>
+                <figure class="double-yt">
                     <div>
                         <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -203,8 +205,10 @@
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                       Le freestyle anti Trump, et la chanson lose yourself, écrite pendant le tournage du film 8 Mile, largement inspiré du parcours d'Eminem,
-                       et pour laquelle il a remporté un Oscar de la meilleure chanson originale ainsi que deux Grammy awards.
+                        Le freestyle anti Trump, et la chanson lose yourself, écrite pendant le tournage du film 8 Mile,
+                        largement inspiré du parcours d'Eminem,
+                        et pour laquelle il a remporté un Oscar de la meilleure chanson originale ainsi que deux Grammy
+                        awards.
                     </figcaption>
                 </figure>
             </article>
