--- a/music/rock.html
+++ b/music/rock.html
@@ -52,8 +52,8 @@
             </div>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/34AmZ4PMz9iNZVp9AMIGZj" frameborder="0"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/track/34AmZ4PMz9iNZVp9AMIGZj"
+                        allow="encrypted-media"></iframe>
                 </div>
             </div>
             <figure class="simple-yt">
@@ -515,8 +515,8 @@
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/The_Cranberries" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                            <a href="https://www.youtube.com/user/TheCranberriesVEVO" target="_blank"><img class="yt-icon"
-                                    src="../images/icons/yt.png" alt="youtube link" /></a>
+                            <a href="https://www.youtube.com/user/TheCranberriesVEVO" target="_blank"><img
+                                    class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
                     </div>, les
                     <div class="multi-link">
@@ -561,11 +561,11 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/48UPSzbZjgc449aqz8bxox"
-                        allow="encrypted-media"></iframe>
+                            allow="encrypted-media"></iframe>
                     </div>
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/7EZC6E7UjZe63f1jRmkWxt"
-                        allow="encrypted-media"></iframe>
+                            allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="double-yt">
@@ -584,7 +584,7 @@
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/04aAxqtGp5pv12UXAg4pkq"
-                        allow="encrypted-media"></iframe>
+                            allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="simple-yt">
