added link of all artists metal.html

--- a/music/metal.html
+++ b/music/metal.html
@@ -29,12 +29,22 @@
             <h2>
                 Le metal
             </h2>
-            <p>
+            <div class="paragraph">
                 Le metal est un style dérivé du rock, apparu dans les années 70s. Il a généralement un rythme très
-                rapide et agressif. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black
-                    Sabbath</a> a été le
-                premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
-            </p>
+                rapide et agressif.
+                <div class="multi-link">
+                    <span>Black Sabbath</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/5M52tdBnJaKSvOpJGz8mfZ" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/channel/UCLCELUuoHbkUxZ9EMHTYebg" target="_blank"><img
+                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                a été le premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
+            </div>
             <div class="spotify-integ">
                 <div>
                     <iframe src="https://open.spotify.com/embed/track/1jzDzZWeSDBg5fhNc3tczV"
@@ -154,9 +164,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de heavy metal, Holy Diver de <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)"
-                        target="_blank">Dio</a> (1983) et Run to the Hills de <a
-                        href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a> (1982)
+                    Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden (1982)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -169,11 +177,42 @@
                 Le Thrash metal est plutôt dérivé du <a href="rock.html#punk">Punk rock</a>. Encore plus
                 rapide/aggressive
                 que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
-                des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que <a
-                    href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>, <a
-                    href="https://fr.wikipedia.org/wiki/Motörhead" target="_blank">Motörhead</a> ou <a
-                    href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black Sabbath</a> (et bien
-                d'autres) ont été les principaux précurseurs du genre.
+                des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que
+                <div class="multi-link">
+                    <span>Iron Maiden</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/6mdiAmATAx73kdxrNrnlao" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/user/ironmaiden" target="_blank"><img class="yt-icon"
+                                src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                <div class="multi-link">
+                    <span>Motörhead</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/1DFr97A9HnbV3SKTJFu62M" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/Motörhead" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/channel/UCbPCDmtTU-W4SdA8abZtWpA" target="_blank"><img
+                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                ou
+                <div class="multi-link">
+                    <span>Black Sabbath</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/5M52tdBnJaKSvOpJGz8mfZ" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/channel/UCLCELUuoHbkUxZ9EMHTYebg" target="_blank"><img
+                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                (et bien d'autres) ont été les principaux précurseurs du genre.
             </p>
             <span class="source">Source : wikipedia.org</span>
             <p>
@@ -240,9 +279,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de thrash metal, Master of Puppets de <a href="https://fr.wikipedia.org/wiki/Metallica"
-                        target="_blank">Metallica</a> (1986) et Raining Blood de <a
-                        href="https://fr.wikipedia.org/wiki/Slayer" target="_blank">Slayer</a> (1986)
+                    Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de Slayer (1986)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -321,9 +358,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de black metal, Quintessence de <a href="https://fr.wikipedia.org/wiki/Darkthrone"
-                        target="_blank">Darkthrone</a> (1995) et Freezing Moon de <a
-                        href="https://fr.wikipedia.org/wiki/Mayhem" target="_blank">Mayhem</a> (1994)
+                    Deux titres de black metal, Quintessence de Darkthrone (1995) et Freezing Moon de Mayhem (1994)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -402,9 +437,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Spirit Crusher de <a href="https://fr.wikipedia.org/wiki/Death"
-                        target="_blank">Death</a> (1998) et L'enfant Sauvage de <a
-                        href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a> (2012)
+                    Deux titres de death metal, Spirit Crusher de Death (1998) et L'enfant Sauvage de Gojira (2012)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -488,10 +521,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de power metal, Through The Fire And Flames de <a
-                        href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a> (2005) et We
-                    Drink Your Blood
-                    de <a href="https://fr.wikipedia.org/wiki/Powerwolf" target="_blank">Powerwolf</a> (2011)
+                    Deux titres de power metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your Blood
+                    de Powerwolf (2011)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -574,10 +605,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de folk metal, reprise Inis Mona de <a href="https://fr.wikipedia.org/wiki/Eluveitie"
-                        target="_blank">Eluveitie</a> (2008) et Keelhauled de <a
-                        href="https://fr.wikipedia.org/wiki/Alestorm" target="_blank">Alestorm</a>
-                    (2009)
+                    Deux titres de folk metal, reprise Inis Mona de Eluveitie (2008) et Keelhauled de Alestorm (2009)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -586,15 +614,25 @@
             <h2>
                 Doom metal
             </h2>
-            <p>
+            <div class="paragraph">
                 Le Doom metal est facilement différenciable par son tempo relativement lent par rapport aux autres
                 genres, et
-                possède une atmosphère plus lourde, pesante. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath"
-                    target="_blank">Black
-                    Sabbath</a> a marqué les débuts du style en 1970. Dans sa globalité, le genre tourne autour du
+                possède une atmosphère plus lourde, pesante.
+                <div class="multi-link">
+                    <span>Black Sabbath</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/5M52tdBnJaKSvOpJGz8mfZ" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/channel/UCLCELUuoHbkUxZ9EMHTYebg" target="_blank"><img
+                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                a marqué les débuts du style en 1970. Dans sa globalité, le genre tourne autour du
                 désespoir. Il n'a pas été
                 très populaire comparé aux autres genres.
-            </p>
+            </div>
             <span class="source">Source : wikipedia.org</span>
             <p>
                 3 groupes de Doom metal :
@@ -655,10 +693,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de doom metal, Black Sabbath de <a href="https://fr.wikipedia.org/wiki/Black_Sabbath"
-                        target="_blank">Black
-                        Sabbath</a> (1970) et The Dead Leaf Echo de <a
-                        href="https://en.wikipedia.org/wiki/Novembers_Doom">Novembers Doom</a> (2005)
+                    Deux titres de doom metal, Black Sabbath de Black Sabbath (1970) et The Dead Leaf Echo de Novembers
+                    Doom (2005)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -737,10 +773,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de metal alternatif, Chop Suey! de <a
-                        href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">SOAD</a> (2001) -qui
-                    atteind bientôt 1Md de vues- et
-                    Coming Undone de <a href="https://fr.wikipedia.org/wiki/Korn" target="_blank">Korn</a> (2005)
+                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteind bientôt 1Md de vues- et
+                    Coming Undone de Korn (2005)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -826,10 +860,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de groove metal, Coulds Over California de <a
-                        href="https://fr.wikipedia.org/wiki/DevilDriver" target="_blank">DevilDriver</a> (2007) et Laid
-                    to Rest de <a href="https://fr.wikipedia.org/wiki/Lamb_of_God" target="_blank">Lamb of God</a>
-                    (2004)
+                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of
+                    God (2004)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
@@ -838,7 +870,7 @@
             <h2>
                 Aujourd'hui
             </h2>
-            <p>
+            <div class="paragraph">
                 De nos jours, le metal n'est toujours pas aussi populaire que d'autres styles étant donné le côté
                 agressif de ce dernier. Comme toute musique, on peut l'écouter pour le plaisir, mais plus généralement
                 pour donner une certaine énergie (pendant un acte sportif par exemple) plutôt que pour calmer, cela va
@@ -847,12 +879,34 @@
                 politique ou
                 l'éthique. La majorité du temps, les artistes abordent des aspects négatifs de la vie ou de la société
                 plutôt que positifs.
-                On retrouve des groupes comme <a href="https://fr.wikipedia.org/wiki/Metallica"
-                    target="_blank">Metallica</a> ou encore
-                <a href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">System of a Down</a>, connu
+                On retrouve des groupes comme
+                <div class="multi-link">
+                    <span>Metallica</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/2ye2Wgw4gimLv2eAKyk1NB" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/Metallica" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/channel/UCbulh9WdLtEXiooRcYK7SWw" target="_blank"><img
+                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                ou encore
+                <div class="multi-link">
+                    <span>System of a Down</span>
+                    <div>
+                        <a href="https://open.spotify.com/artist/5eAWCfyUhZtHHtBdNk56l1" target="_blank"><img
+                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                        <a href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank"><img class="wiki-icon"
+                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        <a href="https://www.youtube.com/channel/UC7-YMmnc0ppcWmio8t1WdcA" target="_blank"><img
+                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                    </div>
+                </div>
+                , connu
                 pour être un groupe
                 engagé dans la politique ; et beaucoup, Beaucoup d'autres.
-            </p>
+            </div>
             <p>
                 Le metal ne se caractérise pas que à l'auditif, mais aussi au visuel. L'image donné par les groupes est
                 soigneusement choisie
