--- a/music/alternative.html
+++ b/music/alternative.html
@@ -30,9 +30,11 @@
                 La musique alternative
             </h2>
             <p>
-                L'alternative est un style regroupant les musiques n'appartenant à aucun style, ou ne suivant pas les
-                règles habituelles de ces derniers. Elle peut également être définie comme "indépendante" car les
-                artistes n'ont pas de règles à suivre. Les titres dans ce style sont souvent mainstream et souvent
+                L'alternative (ou indie) est un style regroupant les musiques n'appartenant à aucun style, ou ne suivant
+                pas les règles habituelles de ces derniers, bien que le genre est très similaire au <a
+                    href="rock.html#indep">indie rock</a> ou à la <a href="pop.html">pop</a>. Elle peut également être
+                définie comme "indépendante" car
+                les artistes n'ont pas de règles à suivre. Les titres dans ce style sont souvent mainstream et souvent
                 médiatisés.
             </p>
         </section>
@@ -47,12 +49,10 @@
                         <div>
                             <a href="https://open.spotify.com/artist/0epOFNiUfyON9EYx7Tpr6V" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                            <a href="https://fr.wikipedia.org/wiki/The_Strokes"
-                                target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
-                                    alt="wikipedia link" /></a>
-                            <a href="https://www.youtube.com/user/thestrokes"
-                                target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
-                                    alt="youtube link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/The_Strokes" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/thestrokes" target="_blank"><img class="yt-icon"
+                                    src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
                     </div>
                 </h3>
@@ -78,13 +78,14 @@
                     un grand succès.
                 </p>
                 <p>
-                    Que ce soit la voix ou lse guitares, la sonorité reste "live" qui est la base du groupe.<br />
+                    Que ce soit la voix ou lse guitares, la sonorité garde un côté très "live" qui est en quelque sorte
+                    la signature du groupe.<br />
                     Le groupe totalise actuellement (2019) 5 albums :
                 </p>
                 <ul>
                     <li>
                         <div class="multi-link">
-                            <span>Is This It (2001)</span>
+                            <span>Is This It</span>
                             <div>
                                 <a href="https://open.spotify.com/album/2yNaksHgeMQM9Quse463b5" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -96,10 +97,11 @@
                                         alt="youtube link" /></a>
                             </div>
                         </div>
+                        (2001)
                     </li>
                     <li>
                         <div class="multi-link">
-                            <span>Room On Fire (2003)</span>
+                            <span>Room On Fire</span>
                             <div>
                                 <a href="https://open.spotify.com/album/5wwZ43m3GAOfdWIxkKHpUz" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -111,10 +113,11 @@
                                         alt="youtube link" /></a>
                             </div>
                         </div>
+                        (2003)
                     </li>
                     <li>
                         <div class="multi-link">
-                            <span>First Impressions of Earth (2005)</span>
+                            <span>First Impressions of Earth</span>
                             <div>
                                 <a href="https://open.spotify.com/album/5rAS8AGeGH1KBxcjTzpVKA" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -126,10 +129,11 @@
                                         alt="youtube link" /></a>
                             </div>
                         </div>
+                        (2005)
                     </li>
                     <li>
                         <div class="multi-link">
-                            <span>Angles (2011)</span>
+                            <span>Angles</span>
                             <div>
                                 <a href="https://open.spotify.com/album/6Jx4cGhWHewTcfKDJKguBQ" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -141,10 +145,11 @@
                                         alt="youtube link" /></a>
                             </div>
                         </div>
+                        (2011)
                     </li>
                     <li>
                         <div class="multi-link">
-                            <span>Comedown Machine (2013)</span>
+                            <span>Comedown Machine</span>
                             <div>
                                 <a href="https://open.spotify.com/album/4WnkQO4xD9ljQooB3VIxCV" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -156,6 +161,7 @@
                                         alt="youtube link" /></a>
                             </div>
                         </div>
+                        (2013)
                     </li>
                 </ul>
                 <div class="spotify-integ">
@@ -179,6 +185,168 @@
                     </div>
                     <figcaption>
                         Deux titres des The Strokes, The End Has No End (2003) et Last Nite (2001)
+                    </figcaption>
+                </figure>
+                <span class="source">Source : wikipedia.org</span>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
+            </article>
+            <article>
+                <h3>
+                    <div class="multi-link">
+                        <span>Arctic Monkeys</span>
+                        <div>
+                            <a href="https://open.spotify.com/artist/7Ln80lUS6He07XvHI8qqHH" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys" target="_blank"><img
+                                    class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/channel/UC-KTRBl9_6AX10-Y7IKwKdw" target="_blank"><img
+                                    class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </div>
+                    </div>
+                </h3>
+                <figure class="float-right bordered">
+                    <img class="rounded-corners"
+                        src="https://ksassets.timeincuk.net/wp/uploads/sites/55/2018/04/ARCTIC_MONKEYS_1000-920x584.jpg"
+                        width="200" alt="Arctic Monkeys" />
+                    <figcaption>
+                        Les artistes du groupe
+                    </figcaption>
+                </figure>
+                <p>
+                    Groupe d'origine britannique, le
+                    groupe est compte aujourd'hui 4
+                    membres : <a href="https://fr.wikipedia.org/wiki/Alex_Turner_(musicien)" target="_blank"> Alex
+                        Turner</a>
+                    (chanteur, guitariste), <a href="https://fr.wikipedia.org/wiki/Jamie_Cook" target="_blank">Jamie
+                        Cook</a>
+                    (guitariste), <a href="https://fr.wikipedia.org/wiki/Matt_Helders" target="_blank">Matt Helders</a>
+                    (batteur) et
+                    <a href="https://fr.wikipedia.org/wiki/Nick_O%27Malley" target="_blank">Nick O'Malley</a>
+                    (bassiste). Le groupe s'est formé en 2002. A cette époque un 5<sup>ème</sup> membre était présent
+                    (<a href="https://fr.wikipedia.org/wiki/Andy_Nicholson" target="_blank">Andy Nicholson</a>), mais
+                    ce dernier a quitté le groupe en 2006.
+                </p>
+                <p>
+                    Le groupe totalise actuellement (2019) 6 albums :
+                </p>
+                <ul>
+                    <li>
+                        <div class="multi-link">
+                            <span>Whatever People Say I Am, That's What I'm Not</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/50Zz8CkIhATKUlQMbHO3k1" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys#Whatever_People_Say_I_Am,_That's_What_I'm_Not_(2005-2006)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_nbQ-Z3A6g3hfs2F5tpbNLjdiZ8H6S4U7U"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        (2006)
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Favourite Worst Nightmare</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/1XkGORuUX2QGOEIL4EbJKm" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys#Favourite_Worst_Nightmare_(2007)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_lr58vhu2hVzMR7o-MBIh-rQERFly0UIuk"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        (2007)
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Humbug</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/5IEoiwkThhRmSMBANhpxl2" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys#Humbug_(2008-2010)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=PLB777A6C4DE0EA67E" target="_blank"><img
+                                        class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        (2009)
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Suck It and See</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/2ym2jcqckXqWeTDoxz3Kst" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys#Suck_It_and_See_(2011-2012)"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_mjWdvfzsg7VpVSb33xnv-6wCZFkgA4tI8"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        (2011)
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>AM</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/78bpIziExqiI9qztvNFlQu" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys#AM"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_kk162BW2lzsM8QE54N8nt6dvmsM9gdn4M"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        (2013)
+                    </li>
+                    <li>
+                        <div class="multi-link">
+                            <span>Tranquility Base Hotel and Casino</span>
+                            <div>
+                                <a href="https://open.spotify.com/album/7v6FNgLDS8KmaWA1amUtqe" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys#Tranquility_Base_Hotel_and_Casino"
+                                    target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                        alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/playlist?list=OLAK5uy_k1mcSWx0aLWGsylsyyXaprA2arXKF-o0I"
+                                    target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                        alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        (2018)
+                    </li>
+                </ul>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/2x8evxqUlF0eRabbW2JBJd" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/5FVd6KXrgO9B3JPmC8OPst" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="double-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ma9I9VBKPiw"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/bpOSxM0rNPM"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <figcaption>
+                        Deux titres des Arctic Monkeys, Fluorescent Adolescent (2007) et Do I Wanna Know ? (2013)
                     </figcaption>
                 </figure>
                 <span class="source">Source : wikipedia.org</span>
