changed death metal song

--- a/music/metal.html
+++ b/music/metal.html
@@ -419,7 +419,7 @@
             </ul>
             <div class="spotify-integ">
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/3sSonVXqDeoEFj2lM7mpYT"
+                    <iframe src="https://open.spotify.com/embed/track/0WNwppTlDzWXGbin2QgZGM"
                         allow="encrypted-media"></iframe>
                 </div>
                 <div>
@@ -429,7 +429,7 @@
             </div>
             <figure class="double-yt">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/RqzZmNqdWck"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BGHlZwMYO9g"
@@ -437,7 +437,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Spirit Crusher de Death (1998) et L'enfant Sauvage de Gojira (2012)
+                    Deux titres de death metal, Shall Rise/Shall Be Dead de George Kollias, un batteur peu connu dont la musique atteint 250bpm (2015) et L'enfant Sauvage de Gojira (2012)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
