--- a/music/pop.html
+++ b/music/pop.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
-<body class="metal-bg">
+<body class="pop-bg">
     <header>
         <div class="title">
             <a href="../index.html" class="logo50"></a>
