bg img rap + electro

--- a/music/electro.html
+++ b/music/electro.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
-<body class="rap-bg">
+<body class="electro-bg">
     <header>
         <div class="title">
             <a href="../index.html#" class="logo50"></a>
