added better yt-integ

--- a/music/metal.html
+++ b/music/metal.html
@@ -51,10 +51,33 @@
                         allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <figure class="simple-yt">
-                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <figure class="yt-integ">
+                <div>
+                    <!-- intégration 1 -->
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <!-- intégration 2 -->
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <!-- intégration 3 -->
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
                 <figcaption>
                     Un exemple ci-dessus : leur titre le plus connu, qui a été un énorme succès en 1970.
                 </figcaption>
@@ -437,7 +460,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Shall Rise/Shall Be Dead de George Kollias, un batteur peu connu dont la musique atteint 250bpm (2015) et L'enfant Sauvage de Gojira (2012)
+                    Deux titres de death metal, Shall Rise/Shall Be Dead de George Kollias, un batteur peu connu dont la
+                    musique atteint 250bpm (2015) et L'enfant Sauvage de Gojira (2012)
                 </figcaption>
             </figure>
             <span class="button"><a href="#">Retour en haut de la page !</a></span>
